<resources>
    <string name="app_name">NewsAgency</string>
    <string name="qr_info">QR-Код вашего набора сайтов</string>
    <string name="back_msg">Назад</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="str_downloading_process">Загрузка данных</string>
    <string name="str_download_finished">Загрузка завершена</string>
    <string name="item_content">%1$s | %2$s</string>
    <string name="upload_news_data">%1$d %2$s с %3$d %4$s</string>
    <string name="mn_settings">Настройки</string>
    <string name="net_exception">Нет данных : Проверьте подключение</string>
    <string name="downloading_hint_1">Подождите...</string>
    <string name="downloading_hint_2">Подождите..</string>
    <string name="downloading_hint_3">Подождите.</string>
    <string name="title_home">Лента</string>
    <string name="title_dashboard">Закладки</string>
    <string name="title_notifications">Настройки</string>
    <string name="str_already_liked">Уже добавлено</string>
    <string name="str_sort_by_size">Сортировать по длине</string>
    <string name="str_sort_by_name">Сортировать по имени</string>
    <string name="str_sort_by_site">Сортировать по сайту</string>
    <string name="str_sort_by_date">Сортировать по дате</string>
    <string name="str_add_new_site">Добавить сайт</string>
    <string name="str_change_adapter">Сменить режим</string>
    <string name="str_upload_news_data">%1$d %2$s с %3$d %4$s</string>
    <string name="str_add_site_head_dialog">Добавить сайт</string>
    <string name="str_add_site_descr_dialog">Введите данные новостного канала сайта</string>
    <string name="str_add_site_pos_button">Добавить</string>
    <string name="str_add_site_neg_button">Отмена</string>
    <string name="str_add_site_input_name">Название</string>
    <string name="str_add_site_input_url">Адрес</string>
    <string name="str_adapter_add_data">%1$s\nИсточник : %2$s</string>
    <string name="test">test</string>
    <string name="str_items_count">%1$d %2$s</string>
    <string name="str_menu_share">Поделиться</string>
    <string name="str_menu_like">В закладки</string>
    <string name="str_invalid_data">Невалидные данные</string>
    <string name="str_net_exception">Нет данных : Проверьте подключение</string>
    <string name="str_news_data_full">%1$s\nИсточник : %2$s\nКатегория : %3$s\n%4$s</string>
    <string name="str_category_unknown">Неизвестно</string>
    <string name="str_preferences">Настройки</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="str_sort_hint">Сортировать по :</string>
    <string name="sort_by_date_settings">По дате</string>
    <string name="str_sort_by_site_settings">По сайту</string>
    <string name="str_sort_by_size_settings">По длине</string>
    <string name="mode_std">Стандартный режим : </string>
    <string name="str_mode_std">Обычный</string>
    <string name="str_mode_custom">Другое</string>
    <string name="str_settings_site_list">Список сайтов</string>
    <string name="str_site_data">%1$s\n%2$s</string>
    <string name="str_items_loaded">%1$d статей загружено</string>
    <string name="str_back">Вернуться назад</string>
    <string name="str_wait">Подождите…</string>
    <string name="str_ready">Готово</string>
    <string name="str_delete_site">Удалить</string>
    <string name="str_delete_full_site">Удалить сайт</string>
    <string name="str_sure">Вы уверены что вы хотите удалить сайт %1$s ?</string>
    <string name="str_liked_items">Закладки</string>
    <string name="str_liked">Закладки</string>
    <string name="str_delete_liked">Удалить из закладок</string>
    <string name="str_sure_delete_liked">Вы уверены ?</string>
    <string name="str_main_page">Лента</string>
    <string name="str_download">Загрузка данных</string>
    <string name="str_day">%1$d дней назад</string>
    <string name="str_hour">%1$d часов назад</string>
    <string name="str_min">%1$d минут назад</string>
    <string name="str_sec">%1$d секунд назад</string>
    <string name="str_liked_done">Добавлено в избранные</string>
    <string name="str_delete_all">Очистить всё</string>
    <string name="str_deleted">Удалено</string>
    <string name="str_delete_from_all">Удалить из ленты навсегда ?</string>
    <string name="str_filter">Фильтрация</string>
    <string name="str_filter_by_tag">По тегам</string>
    <string name="str_no_filter">Без фильтра</string>
    <string name="str_tags">Тэги</string>
    <string name="str_enter_tags">Введите тэги</string>
    <string name="str_enter_title">Предупреждение</string>
    <string name="str_enter_dialogue">Для корректной работы приложения необходимо
    разрешение на автозапуск, а также на отображение на экране блокировки,
    отображение всплывающих окон в фоновом режиме, показ постоянных уведомлений.</string>
    <string name="str_ok">Ок</string>
    <string name="str_connection_revived">Подключение восстановлено</string>
    <string name="str_no_favorites">Избранные не содержат ни одной новости.</string>
    <string name="str_footer">Нажмите, чтобы вернуться в начало.</string>
    <string name="str_header">Добро пожаловать в избранное.\nНажмите, чтобы попасть в конец.</string>
    <string name="str_empty_sites">База данных не содержит ни одного сайта.</string>
</resources>